--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install and ng build
+      - name: npm install and npm build
         run: |
           npm i
-          ng build --prod
+          npm run build --prod
       - name: Add SSH key
         uses: kielabokkie/ssh-key-and-known-hosts-action@v1
         with:
