--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,13 +32,9 @@ jobs:
         uses: kielabokkie/ssh-key-and-known-hosts-action@v1
         with:
           ssh-private-key: ${{ secrets.DEPLOY_SERVER_KEY }}
-          ssh-host: ${{ secrets.DEPLOY_SERVER_ADDRESS_WITHOUT_SSH }}
-      - name: copy file via ssh key
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.DEPLOY_SERVER_ADDRESS }}
-          username: ${{ secrets.DEPLOY_SERVER_USERNAME }}
-          port: ${{ secrets.DEPLOY_SERVER_PORT }}
-          key: ${{ secrets.DEPLOY_SERVER_KEY }}
-          source: "dist"
-          target: "/var/www/html/"
+          ssh-host: ${{ secrets.DEPLOY_SERVER_ADDRESS }}
+      - name: Deploy with rsync
+        env:
+          DEPLOY_SERVER_ADDRESS: ${{ secrets.DEPLOY_SERVER_ADDRESS }}
+        run: |
+          rsync -avhz -delete dist ${{ secrets.DEPLOY_SERVER_USERNAME }}@${{ secrets.DEPLOY_SERVER_ADDRESS }}:var/www/html
